One bug left. The rest of the project is complete.

--- a/src/CheeseMVC/Views/Shared/_Layout.cshtml
+++ b/src/CheeseMVC/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a asp-area="" asp-controller="Cheese" asp-action="Index" class="navbar-brand">CheeseMVC</a>
+                <a asp-controller="Cheese" asp-action="Index" class="navbar-brand">Cheeses</a>
+                <a asp-controller="Category" asp-action="Index" class="navbar-brand">Categories</a>
+                <a asp-controller="Menu" asp-action="Index" class="navbar-brand">Menus</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
